--- a/components/Card.less
+++ b/components/Card.less
@@ -270,6 +270,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  //&:active {
+  //  background-color: #1263F1;
+  //  transition: background-color 0s;
+  //}
   i {
     font-size: 16px;
     margin-right: 6px;
