--- a/components/Card.less
+++ b/components/Card.less
@@ -1,5 +1,4 @@
 .card {
-  width: 548px;
   background: #FFFFFF;
   border-radius: 20px 20px 20px 20px;
   color: #333;
@@ -69,6 +68,7 @@
       padding-right: 10px;
       font-size: 16px;
       font-weight: 600;
+      width: 100%;
     }
   }
   > p {
